tests/snapshots/cli__reference_files@scanning__keywords.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/scanning/keywords.lox
---
status: 101
stdout: []
stderr:
  - "[line 1] Error at 'and': Expect expression."
  - "thread 'main' panicked at src/parser.rs:142:9:"
  - "Couldn't parse Token { type: And, literal: None, loc: Location { lexeme: \"and\", line: 1 } }"
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
